turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:94: error: not found: value init
		init();
                ^Turmite:120: error: not found: value nbSteps
		for (stepIt <- 1 to nbSteps) {
                                    ^